update customer for retail and pos